proxy_apps/openwrt-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwrt-service
spec:
  ports:
    - port: 80
      targetPort: 80
  type: ExternalName
  externalName: 192.168.0.1
